# hecate

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/hecate/: accelerator.hpp  cpu_accelerator.hpp
scripts/: cmake.sh
src/: CMakeLists.txt  accelerator.cpp  cpu_accelerator.cpp
tests/: CMakeLists.txt  test_accelerator.cpp  test_cpu_accelerator.cpp
